[package]
name = "db-core"
version = "0.2.0"
authors = ["stencillogic"]
edition = "2018"
description = "dbms engine"
license = "MIT"
categories = ["database-implementations"]
keywords = ["dbms"]
repository = "https://github.com/stencillogic/db-core"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "0.4.3"
log = "0.4.8"

[dev-dependencies]
rand = "0.8.4"
